# core-math-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
include/: core-math.h  math.h
include/bits/: mathcalls.h
lib/: signgam.c
src/: lib.rs
tests/: sanity.rs
